Closed
Bug 151054
Opened 24 years ago
Closed 24 years ago
Crash with position: absolute applied to <math>
Categories
(Core :: MathML, defect)
Core
MathML
Tracking
()
RESOLVED
FIXED
mozilla1.0.1
People
(Reporter: brian, Assigned: rbs)
Details
(Keywords: crash, testcase)
Attachments
(2 files)
|
430 bytes,
text/xml
|
Details | |
|
1.32 KB,
patch
|
roc
:
review+
waterson
:
superreview+
jud
:
approval+
|
Details | Diff | Splinter Review |
(Guessing at the component here)
The testcase I'm about to attach crashes. I've reduced it to the following CSS
rule:
math { position: absolute; }
This occurs in Win2k on Mozilla 1.0 and 1.1a. On Mozilla 1.0, it crashes while
loading the page. On 1.1a, it crashes when you leave the page.
| Reporter | ||
Comment 1•24 years ago
|
||
| Reporter | ||
Comment 2•24 years ago
|
||
Talkback incidents (with 1.1a):
TB7252883Z
TB7252415E
| Reporter | ||
Updated•24 years ago
|
Updated•24 years ago
|
QA Contact: petersen → moied
Comment 3•24 years ago
|
||
A crash bug related to position:absolute was fixed recently... could you try the
latest build? ftp://ftp.mozilla.org/pub/mozilla/nightly/latest-trunk
| Reporter | ||
Comment 4•24 years ago
|
||
The date on the latest win32 build was June 14, so I just checked out the latest
source and built it. The crash still occurs. Jonas, did you try the testcase?
Confirmed on Linux RedHat 7.2
Mozilla 1.1a Seamonkey build
page displays, infinity sign shows.
crash when leaving the page (back button)
Comment 6•24 years ago
|
||
--> MathML; confirming.
Assignee: attinasi → rbs
Component: Layout → MathML
QA Contact: moied → ian
Comment 7•24 years ago
|
||
Confirming.
Comment 8•24 years ago
|
||
Filed bug 152301 on the regression that the "and confirm bug" checkbox no longer
works.
Now attempting to confirm this bug using the "Confirm bug" radio button...
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 9•24 years ago
|
||
Ah, that worked :-)
| Reporter | ||
Comment 10•24 years ago
|
||
M.J.G. saw this on Linux. Setting OS/Platform to All.
OS: Windows 2000 → All
Hardware: PC → All
| Assignee | ||
Comment 11•24 years ago
|
||
(The frame construction code isn't one of the prettiest area of Gecko.
Hopefully someday, a shake-up could eliminate these duplicate codes that are
out-of sync.)
| Assignee | ||
Comment 12•24 years ago
|
||
Cc:ing roc & waterson for r/sr.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.1beta
| Assignee | ||
Comment 13•24 years ago
|
||
Comment on attachment 88037 [details] [diff] [review]
fix - it is the placeholder frame that is added to flow, not the positionned frame
For the record, this is in an if-def MOZ_MATHML section. So no risk that it
will regress anything. Also BTW, <math> is not expected to support such things
anyway. It already has enough worries of its own and users can achieve extra
effects by wrapping their math into a <div> and playing with that. For example,
doing a floated/fixed-positioned numerator in a fraction wouldn't make much
sense.
But in this context, avoiding the crash with the fix is worth it.
Comment on attachment 88037 [details] [diff] [review]
fix - it is the placeholder frame that is added to flow, not the positionned frame
r=roc+moz
Attachment #88037 -
Flags: review+
Comment 15•24 years ago
|
||
Comment on attachment 88037 [details] [diff] [review]
fix - it is the placeholder frame that is added to flow, not the positionned frame
sr=waterson
Attachment #88037 -
Flags: superreview+
| Assignee | ||
Comment 16•24 years ago
|
||
Resolving as FIXED - was checked in to trunk on 2002-07-08.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Updated•24 years ago
|
Attachment #88037 -
Flags: approval+
Comment 17•24 years ago
|
||
please checkin to the 1.0.1 branch. once there, remove the "mozilla1.0.1+"
keyword and add the "fixed1.0.1" keyword.
Keywords: mozilla1.0.1+
| Assignee | ||
Comment 18•24 years ago
|
||
checked in to branch - marking as fixed1.0.1
Keywords: mozilla1.0.1+ → fixed1.0.1
Target Milestone: mozilla1.1beta → mozilla1.0.1
Comment 19•17 years ago
|
||
Crashtest added as part of http://hg.mozilla.org/mozilla-central/rev/54417ebbaea2
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•