crash if position: absolute applied to <math>, b=151054, r=roc+moz, sr=waterson